<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.btegermany</groupId>
    <artifactId>terraplusminus</artifactId>
    <version>1.6.1-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>Terraplusminus</name>

    <description>A plugin which implements the terra-- api in a papermc plugin</description>
    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <url>https://bte-germany.de</url>

    <build>
        <plugins>
            <plugin> <!-- https://central.sonatype.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <annotationProcessorPaths>
                        <!--
                            Automatic execution of annotation processors in the classpath is being deprecated,
                            and removed in Java 22 (see https://bugs.java.com/bugdatabase/view_bug?bug_id=8321314).
                            We therefore need to explicitly tell Maven to run Lombok's.
                        -->
                        <path>
                            <groupId>org.projectlombok</groupId> <!-- https://central.sonatype.com/artifact/org.projectlombok/lombok -->
                            <artifactId>lombok</artifactId>
                            <version>1.18.42</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin> <!-- https://central.sonatype.com/artifact/org.apache.maven.plugins/maven-shade-plugin -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                    <filters>
                        <filter>
                            <!--
                                Exclude JAR signature files.
                                They correspond to the JARs of the libs we shade,
                                and are invalid for the resulting T+- JAR.
                            -->
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/*.SF</exclude>
                                <exclude>META-INF/*.DSA</exclude>
                                <exclude>META-INF/*.RSA</exclude>
                            </excludes>
                        </filter>
                    </filters>
                    <relocations>
                        <relocation>
                            <pattern>org.bstats</pattern>
                            <shadedPattern>de.btegermany.terraplusminus.bstats</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>io.papermc.paperlib</pattern>
                            <shadedPattern>de.btegermany.terraplusminus.paperlib</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.google.code.gson</pattern>
                            <shadedPattern>de.btegermany.terraplusminus.gson</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>net.buildtheearth.terraminusminus</pattern>
                            <shadedPattern>de.btegermany.terraplusminus.terraminusminus</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>net.daporkchop.lib</pattern>
                            <shadedPattern>de.btegermany.terraplusminus.porklib</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.google.guava</pattern>
                            <shadedPattern>de.btegermany.terraplusminus.guava</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>blue.lhf</groupId>
                <artifactId>run-paper-maven-plugin</artifactId>
                <version>1.1.1</version>
                <configuration>
                    <minecraftVersion>1.21.8</minecraftVersion>
                    <acceptEula>true</acceptEula>
                    <serverDirectory>run</serverDirectory>
                    <jvmFlags>
                        <flag>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:25566</flag>
                        <flag>--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED</flag>
                    </jvmFlags>
                </configuration>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>smyler-releases</id>
            <name>Smyler's maven repository</name>
            <url>https://maven.smyler.net/releases/</url>
        </repository>
        <repository>
            <id>smyler-snapshots</id>
            <name>Smyler's snapshot maven repository</name>
            <url>https://maven.smyler.net/snapshots</url>
        </repository>
        <repository>
            <id>dmulloy2-repo</id>
            <url>https://repo.dmulloy2.net/repository/public/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>OpenCollab Snapshots</id>
            <url>https://repo.opencollab.dev/snapshot/</url>
        </repository>
        <!--<repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>-->
        <repository>
            <id>Daporkchop_</id>
            <url>https://maven.daporkchop.net/</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>kiputyttö-releases</id>
            <name>Ilari's Project Repository</name>
            <url>https://maven.lhf.blue/releases</url>
        </pluginRepository>
    </pluginRepositories>

    <dependencies>
        <dependency> <!-- https://repo.papermc.io/#browse/browse:maven-snapshots:io%2Fpapermc%2Fpaper%2Fpaper-api -->
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.21.8-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency> <!-- https://repo.papermc.io/#browse/search/maven=attributes.maven2.artifactId%3Dpaperlib -->
            <groupId>io.papermc</groupId>
            <artifactId>paperlib</artifactId>
            <version>1.0.8</version>
            <scope>compile</scope>
        </dependency>

        <dependency> <!-- https://central.sonatype.com/artifact/org.projectlombok/lombok -->
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.42</version>
            <scope>provided</scope>
        </dependency>


        <dependency> <!-- https://central.sonatype.com/artifact/com.google.code.gson/gson -->
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.13.2</version>
            <scope>compile</scope>
        </dependency>
        <!--<dependency>  https://maven.smyler.net/#/releases/net/buildtheearth/terraminusminus/terraminusminus-bukkit
            <groupId>net.buildtheearth.terraminusminus</groupId>
            <artifactId>terraminusminus-bukkit</artifactId>
            <version>2.1.1-1.21.8</version>
            <scope>compile</scope>
        </dependency>-->
        <!--<dependency>
            <groupId>com.github.DavixDevelop</groupId>
            <artifactId>terraminusminus</artifactId>
            <version>addon-support-mc-1-21-8-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>-->
        <dependency> <!-- https://maven.smyler.net/#/snapshots/net/buildtheearth/terraminusminus/terraminusminus-bukkit -->
            <groupId>net.buildtheearth.terraminusminus</groupId>
            <artifactId>terraminusminus-bukkit</artifactId>
            <version>experimental-davix-addon-support-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
        <dependency> <!-- https://central.sonatype.com/artifact/com.google.guava/guava -->
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>33.5.0-jre</version>
            <scope>compile</scope>
        </dependency>
        <dependency> <!-- https://central.sonatype.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
            <!--
                Terra+- itself doesn't need Jackson, but we are hitting this JDK bug: https://bugs.openjdk.org/browse/JDK-8305250.
                Having a direct compile dependency on Jackson gets rid of the unnecessary warning.
            -->
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.20.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency> <!-- https://github.com/PorkStudios/PorkLib - needs to be the same as in TerraMinusMinus-->
            <groupId>net.daporkchop.lib</groupId>
            <artifactId>common</artifactId>
            <version>0.5.7-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
        <dependency> <!-- https://github.com/dmulloy2/ProtocolLib/releases -->
            <groupId>net.dmulloy2</groupId>
            <artifactId>ProtocolLib</artifactId>
            <version>5.4.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency> <!-- https://central.sonatype.com/artifact/org.bstats/bstats-bukkit -->
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>3.1.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency> <!-- https://mvnrepository.com/artifact/it.unimi.dsi/fastutil -->
            <groupId>it.unimi.dsi</groupId>
            <artifactId>fastutil</artifactId>
            <version>8.5.15</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
</project>